decompose node sidebar container

--- a/src/configs/translations/en.json
+++ b/src/configs/translations/en.json
@@ -1,3 +1,4 @@
 {
-    "instructionOfAddingNodes": "Drag and drop these items onto the workspace."
+    "instructionOfAddingNodes": "Drag and drop these items onto the workspace.",
+    "selectSchema": "Select schema"
 }
