--- a/src/configs/translations/ru.json
+++ b/src/configs/translations/ru.json
@@ -1,3 +1,4 @@
 {
-    "instructionOfAddingNodes": "Перетащи эти компоненты на рабочую область."
+    "instructionOfAddingNodes": "Перетащи эти компоненты на рабочую область.",
+    "selectSchema": "Выберете схему"
 }
