--- a/src/configs/translations/ua.json
+++ b/src/configs/translations/ua.json
@@ -1,3 +1,4 @@
 {
-    "instructionOfAddingNodes": "Перетащи ці компоненти на робочу область."
+    "instructionOfAddingNodes": "Перетащи ці компоненти на робочу область.",
+    "selectSchema": "Оберіть схему"
 }
