add signal energy translation

--- a/src/configs/translations/en.json
+++ b/src/configs/translations/en.json
@@ -13,5 +13,6 @@
     "MONITOR": "MONITOR",
     "COMMUNICATION LINE": "COMMUNICATION LINE",
     "CORRELATOR": "CORRELATOR",
-    "COMPARATOR": "COMPARATOR"
+    "COMPARATOR": "COMPARATOR",
+    "SIGNAL ENREGY": "SIGNAL ENREGY"
 }
