--- a/src/configs/translations/ru.json
+++ b/src/configs/translations/ru.json
@@ -13,5 +13,6 @@
     "MONITOR": "МОНИТОР",
     "COMMUNICATION LINE": "ЛИНИЯ СВЯЗИ",
     "CORRELATOR": "КОРЕЛЯТОР",
-    "COMPARATOR": "КОМПАРАТОР"
+    "COMPARATOR": "КОМПАРАТОР",
+    "SIGNAL ENREGY": "ЭНЕРГИЯ СИГНАЛА"
 }
