--- a/src/configs/translations/ua.json
+++ b/src/configs/translations/ua.json
@@ -1,5 +1,5 @@
 {
-    "instructionOfAddingNodes": "Перетащи ці компоненти на робочу область.",
+    "instructionOfAddingNodes": "Пересуньте ці компоненти на робочу область.",
     "selectSchema": "Оберіть схему",
     "closeSchema": "Закрити схему",
     "newSchema": "Нова схема",
@@ -13,5 +13,6 @@
     "MONITOR": "МОНІТОР",
     "COMMUNICATION LINE": "ЛІНІЯ ЗВ'ЯЗКУ",
     "CORRELATOR": "КОРЕЛЯТОР",
-    "COMPARATOR": "КОМПАРАТОР"
+    "COMPARATOR": "КОМПАРАТОР",
+    "SIGNAL ENREGY": "ЕНЕРГІЯ СИГНАЛУ"
 }
