add translation for everything

--- a/src/configs/translations/ua.json
+++ b/src/configs/translations/ua.json
@@ -13,5 +13,39 @@
     "COMMUNICATION LINE": "ЛІНІЯ ЗВ'ЯЗКУ",
     "CORRELATOR": "КОРЕЛЯТОР",
     "COMPARATOR": "КОМПАРАТОР",
-    "SIGNAL ENREGY": "ЕНЕРГІЯ СИГНАЛУ"
+    "SIGNAL ENREGY": "ЕНЕРГІЯ СИГНАЛУ",
+    "simulationIsFinished": "Симуляцію завершено",
+    "save": "ЗБЕРЕГТИ",
+    "remove": "ВИДАЛИТИ",
+    "coeffForIncomingSignal": "Коефіцієнт вхідного сигналу",
+    "coeffForTheNoise": "Коефіцієнт шуму",
+    "lowLevel1": "Мінімальний рівень для 1",
+    "highLevel0": "Максимальний рівень для 0",
+    "showOutput": "ПОКАЗАТИ РЕЗУЛЬТАТ",
+    "GLOBAL": "ГЛОБАЛЬНІ НАЛАШТУВАННЯ",
+    "useSamples": "Використовувати відліки",
+    "quantizationPeriod": "Період квантування",
+    "samplesPerUnit": "Відліки на одиничний елемент сигналу",
+    "numberOfSamples": "Кількість відліків",
+    "periodOfSignalUnit": "Період одиничного елементу сигналу",
+    "executionTime": "Час симуляції",
+    "noiseType": "Вид шуму",
+    "amplitude": "Амплітуда",
+    "whiteNoise": "Білий шум",
+    "pinkNoise": "Рожевий шум",
+    "blueNoise": "Синій шум",
+    "grayNoise": "Сірий шум",
+    "impulseNoise": "Імпульсний шум",
+    "randomNoise": "Випадковий шум",
+    "formNotFound": "Форма не знайдена",
+    "signalType": "Тип сигналу",
+    "referenceSymbol": "Еталонний символ",
+    "samplesPerPeriod": "Кількість відліків на період",
+    "frequency": "Частота",
+    "outOfSync": "Рассинхронізація",
+    "manchesterСode": "Манчестерський код",
+    "analogSignal": "Аналоговий сигнал",
+    "sequence": "Послідовність",
+    "cancel": "ВІДМІНА",
+    "spectre": "СПЕКТР"
 }
