--- a/src/configs/translations/en.json
+++ b/src/configs/translations/en.json
@@ -13,5 +13,39 @@
     "COMMUNICATION LINE": "COMMUNICATION LINE",
     "CORRELATOR": "CORRELATOR",
     "COMPARATOR": "COMPARATOR",
-    "SIGNAL ENREGY": "SIGNAL ENREGY"
+    "SIGNAL ENREGY": "SIGNAL ENREGY",
+    "simulationIsFinished": "Simulation is finished",
+    "save": "SAVE",
+    "remove": "REMOVE",
+    "coeffForIncomingSignal": "Coefficient for the incoming signal",
+    "coeffForTheNoise": "Coefficient for the noise",
+    "lowLevel1": "Low lavel 1",
+    "highLevel0": "Hight level 0",
+    "showOutput": "SHOW OUTPUT",
+    "GLOBAL": "GLOBAL PROPERTIES",
+    "useSamples": "Use samples",
+    "quantizationPeriod": "Quantization period",
+    "samplesPerUnit": "Samples per unit",
+    "numberOfSamples": "Number of samples",
+    "periodOfSignalUnit": "Period of signal unit",
+    "executionTime": "Time of execution",
+    "noiseType": "Noise type",
+    "amplitude": "Amplitude",
+    "whiteNoise": "White noise",
+    "pinkNoise": "Pink noise",
+    "blueNoise": "Blue noise",
+    "grayNoise": "Gray noise",
+    "impulseNoise": "Impulse noise",
+    "randomNoise": "Random noise",
+    "formNotFound": "Form not found",
+    "signalType": "Signal type",
+    "referenceSymbol": "Referenece symbol",
+    "samplesPerPeriod": "Samples per period",
+    "frequency": "Frequency",
+    "outOfSync": "Out of sync",
+    "manchesterСode": "Manchester сode",
+    "analogSignal": "Analog signal",
+    "sequence": "Sequece",
+    "cancel": "CANCEL",
+    "spectre": "SPECTRE"
 }
