--- a/src/configs/translations/ru.json
+++ b/src/configs/translations/ru.json
@@ -13,5 +13,39 @@
     "COMMUNICATION LINE": "ЛИНИЯ СВЯЗИ",
     "CORRELATOR": "КОРЕЛЯТОР",
     "COMPARATOR": "КОМПАРАТОР",
-    "SIGNAL ENREGY": "ЭНЕРГИЯ СИГНАЛА"
+    "SIGNAL ENREGY": "ЭНЕРГИЯ СИГНАЛА",
+    "simulationIsFinished": "Симуляция завершена",
+    "save": "СОХРАНИТЬ",
+    "remove": "УДАЛИТЬ",
+    "coeffForIncomingSignal": "Коэффициент входящего сигнала",
+    "coeffForTheNoise": "Коэффициент шума",
+    "lowLevel1": "Минимальный уровень для 1",
+    "highLevel0": "Максимальный уровень для 0",
+    "showOutput": "ПОКАЗАТЬ РЕЗУЛЬАТ",
+    "GLOBAL": "ГЛОБАЛЬНЫЕ НАСТРОЙКИ",
+    "useSamples": "Использовать отсчёты",
+    "quantizationPeriod": "Период квантования",
+    "samplesPerUnit": "Отсчёты на единичный элемент сигнала",
+    "numberOfSamples": "Колличество отсчётов",
+    "periodOfSignalUnit": "Период единичного элемента сигнала",
+    "executionTime": "Время симуляции",
+    "noiseType": "Вид шума",
+    "amplitude": "Амплитуда",
+    "whiteNoise": "Белый шум",
+    "pinkNoise": "Розовый шум",
+    "blueNoise": "Синий шум",
+    "grayNoise": "Серый шум",
+    "impulseNoise": "Импульсный шум",
+    "randomNoise": "Случайный шум",
+    "formNotFound": "Форма не найдена",
+    "signalType": "Тип сигнала",
+    "referenceSymbol": "Эталонный символ",
+    "samplesPerPeriod": "Колличество отсчётов",
+    "frequency": "Частота",
+    "outOfSync": "Рассинхронизация",
+    "manchesterСode": "Манчестерский код",
+    "analogSignal": "Аналоговый сигнал",
+    "sequence": "Последовательность",
+    "cancel": "ОТМЕНА",
+    "spectre": "СПЕКТР"
 }
