add period filter for monitor output

--- a/src/configs/translations/en.json
+++ b/src/configs/translations/en.json
@@ -47,5 +47,7 @@
     "analogSignal": "Analog signal",
     "sequence": "Sequece",
     "cancel": "CANCEL",
-    "spectre": "SPECTRE"
+    "spectre": "SPECTRE",
+    "from": "From",
+    "to": "To"
 }
