--- a/src/configs/translations/ru.json
+++ b/src/configs/translations/ru.json
@@ -47,5 +47,7 @@
     "analogSignal": "Аналоговый сигнал",
     "sequence": "Последовательность",
     "cancel": "ОТМЕНА",
-    "spectre": "СПЕКТР"
+    "spectre": "СПЕКТР",
+    "from": "С",
+    "to": "По"
 }
