--- a/src/configs/translations/ua.json
+++ b/src/configs/translations/ua.json
@@ -47,5 +47,7 @@
     "analogSignal": "Аналоговий сигнал",
     "sequence": "Послідовність",
     "cancel": "ВІДМІНА",
-    "spectre": "СПЕКТР"
+    "spectre": "СПЕКТР",
+    "from": "З",
+    "to": "По"
 }
