--- a/src/configs/translations/en.json
+++ b/src/configs/translations/en.json
@@ -49,5 +49,9 @@
     "cancel": "CANCEL",
     "spectre": "SPECTRE",
     "from": "From",
-    "to": "To"
+    "to": "To",
+    "POWER_SPECTRAL_DENSITY_OF_SIGNAL": "POWER SPECTRAL DENSITY OF SIGNAL",
+    "ChartTypeSelect": "Chart type",
+    "linear": "Linear",
+    "logarithmic": "Logarithmic"
 }
