--- a/src/configs/translations/ru.json
+++ b/src/configs/translations/ru.json
@@ -49,5 +49,9 @@
     "cancel": "ОТМЕНА",
     "spectre": "СПЕКТР",
     "from": "С",
-    "to": "По"
+    "to": "По",
+    "POWER_SPECTRAL_DENSITY_OF_SIGNAL": "СПЕКТРАЛЬНАЯ ПЛОТНОСТЬ МОЩНОСТИ СИГНАЛА",
+    "ChartTypeSelect": "Тип графика",
+    "linear": "Линейный",
+    "logarithmic": "Логарифмический"
 }
