--- a/src/configs/translations/ru.json
+++ b/src/configs/translations/ru.json
@@ -40,7 +40,7 @@
     "formNotFound": "Форма не найдена",
     "signalType": "Тип сигнала",
     "referenceSymbol": "Эталонный символ",
-    "samplesPerPeriod": "Колличество отсчётов",
+    "samplesPerPeriod": "Колличество отсчётов на период",
     "frequency": "Частота",
     "outOfSync": "Рассинхронизация",
     "manchesterСode": "Манчестерский код",
