--- a/src/configs/translations/ru.json
+++ b/src/configs/translations/ru.json
@@ -50,7 +50,7 @@
     "spectre": "СПЕКТР",
     "from": "С",
     "to": "По",
-    "SPECTRAL DENSITY": "СПЕКТРАЛЬНАЯ ПЛОТНОСТЬ МОЩНОСТИ СИГНАЛА",
+    "SPECTRAL DENSITY": "СПЕКТРАЛЬНАЯ ПЛОТНОСТЬ",
     "ChartTypeSelect": "Тип графика",
     "linear": "Линейный",
     "logarithmic": "Логарифмический"
