--- a/src/configs/translations/ua.json
+++ b/src/configs/translations/ua.json
@@ -50,7 +50,7 @@
     "spectre": "СПЕКТР",
     "from": "З",
     "to": "По",
-    "SPECTRAL DENSITY": "СПЕКТРАЛЬНА ЩІЛЬНІСТЬ ПОТУЖНОСТІ СИГНАЛУ",
+    "SPECTRAL DENSITY": "СПЕКТРАЛЬНА ЩІЛЬНІСТЬ",
     "ChartTypeSelect": "Тип графіку",
     "linear": "Лінійний",
     "logarithmic": "Логарифмічний"
