--- a/src/configs/translations/ru.json
+++ b/src/configs/translations/ru.json
@@ -11,7 +11,7 @@
     "REFERENCE SOURCE": "ИСТОЧНИК ЭТАЛОННОГО СИГНАЛА",
     "MONITOR": "МОНИТОР",
     "COMMUNICATION LINE": "ЛИНИЯ СВЯЗИ",
-    "CORRELATOR": "КОРЕЛЯТОР",
+    "CORRELATOR": "КОРРЕЛЯТОР",
     "COMPARATOR": "КОМПАРАТОР",
     "SIGNAL ENREGY": "ЭНЕРГИЯ СИГНАЛА",
     "simulationIsFinished": "Симуляция завершена",
