--- a/src/configs/translations/ua.json
+++ b/src/configs/translations/ua.json
@@ -11,7 +11,7 @@
     "REFERENCE SOURCE": "ДЖЕРЕЛО ЕТАЛОННОГО СИГНАЛУ",
     "MONITOR": "МОНІТОР",
     "COMMUNICATION LINE": "ЛІНІЯ ЗВ'ЯЗКУ",
-    "CORRELATOR": "КОРЕЛЯТОР",
+    "CORRELATOR": "КОРРЕЛЯТОР",
     "COMPARATOR": "КОМПАРАТОР",
     "SIGNAL ENREGY": "ЕНЕРГІЯ СИГНАЛУ",
     "simulationIsFinished": "Симуляцію завершено",
