--- a/src/expand/lang/ru.json
+++ b/src/expand/lang/ru.json
@@ -1,3 +1,9 @@
 {
-    "ADDER": "СУМАТОР"
+    "ADDER": "СУМАТОР",
+    "MONITOR": "МОНИТОР",
+    "from": "С",
+    "to": "По",
+    "COMMUNICATION LINE": "ЛИНИЯ СВЯЗИ",
+    "coeffForIncomingSignal": "Коэффициент входного сигнала",
+    "coeffForTheNoise": "Коэффициент шума"
 }
